@@ -1,3 +1,8 @@
+2006-01-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-vc.el (vc-user-login-name): Wrap defadvice with a test for
+	`process-file', in order to let it work for older Emacsen too.
+
 2006-01-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.52 released.
